--- a/AgendaFasb/src/br/edu/fasb/AgendaForm.form
+++ b/AgendaFasb/src/br/edu/fasb/AgendaForm.form
@@ -282,6 +282,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Deletar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_deletarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btn_finalizar">
       <Properties>
